# openthread-r21

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  trxAES
script/: bootstrap.sh  build.sh  buildAll.sh  buildRcpConbee.sh  buildRcpConbee2.sh  buildRcpConbee2Debug.sh  buildRcpDebug.sh  buildRcpRaspbee2.sh  buildRcpRelease.sh  buildRelease.sh  flashEval.sh  flashEvalCLI.sh  flashRcpConbee2Debug.sh  flashRcpConbeeDebug.sh  flashRcpDebug.sh  flashRcpRelease.sh
script/openocd_config/: ATMEL-ICE-OpenOCD-SAMR21-ZLL.cfg
src/: CMakeLists.txt  Makefile  arm-none-eabi-gcc  arm-none-eabi-gcc.cmake  openthread-core-r21-config-check.h  openthread-core-r21-config.h  platformVersion.h  syscallRedirect.c
src/AT86RF233/: at86rf233_Bitfield.h
src/HAL/: samr21Aes.c  samr21Clock.c  samr21Clock.h  samr21Dma.c  samr21FeCtrl.c  samr21NopDelay.c  samr21NopDelay.h  samr21Nvm.c  samr21PowerManager.c  samr21PowerManager.h  samr21Radio.c  samr21Radio.h  samr21RadioCtrl.c  samr21RadioFSM.c  samr21RadioFSM.h  samr21Rtc.c  samr21SysTick.c  samr21Timer.c  samr21Trx.c  samr21Trx.h  samr21Uart.c  samr21Usb.c
src/HAL/include/: 802_15_4_Bitfields.h  802_15_4_Helper.h  at86rf233_Bitfield.h  samr21Aes.h  samr21At86rf233.h  samr21Clock.h  samr21Dma.h  samr21FeCtrl.h  samr21NopDelay.h  samr21Nvm.h  samr21Radio.h  samr21RadioCtrl.h  samr21RadioFSM.h  samr21RadioFeCtrl.h  samr21Rtc.h  samr21SysTick.h  samr21Timer.h  samr21Trx.h  samr21Uart.h  samr21Usb.h  samr21debugPins.h
src/HAL/old/: 802_15_4_Helper.c  samr21Aes.c  samr21Aes.h  samr21Radio.c  samr21Radio.h  samr21RadioAddrMatch.h  samr21RadioBuffer.h  samr21RadioFSM.h  samr21Usb.c  samr21Usb.h  usbDesc.c  usbDesc.h
src/HAL/old/CLKSRC/: clksrc.c  clksrc.h
src/HAL/old/PORT/: port.h
src/HAL/radio/: samr21RadioAddrMatch.c  samr21RadioAes.c  samr21RadioBuffer.c  samr21RadioCtrl.c  samr21RadioEdHandler.c  samr21RadioFeCtrl.c  samr21RadioIrqHandler.c  samr21RadioRxHandler.c  samr21RadioTrxRegCopy.c  samr21RadioTxHandler.c  samr21RadioVars.c  samr21Trx.c  samr21TrxRegCopy.c
src/HAL/radio/include/: 802_15_4_Helper.h  at86rf233_Bitfield.h  samr21RadioAddrMatch.h  samr21RadioAes.h  samr21RadioCtrl.h  samr21RadioEdHandler.h  samr21RadioFeCtrl.h  samr21RadioIrqHandler.h  samr21RadioRxHandler.h  samr21RadioTrxRegCopy.h  samr21RadioTxHandler.h  samr21RadioVars.h  samr21Trx.h
src/OT-HAL/: otFlash.c  otPlatAlarm.c  otPlatEntropy.c  otPlatLog.c  otPlatRadio.c  otPlatSystem.c  otPlatUartUsb.c
src/OT-HAL/include/: otPlatSystemHeader.h
src/OT-Utils/: otUltilWrapper_macFrame.cpp  otUltilWrapper_macFrame.h  otUtilWrapper_macFrame.cpp  otUtilities_linkMetrics.cpp  otUtilities_macFrame.cpp  otUtilities_sourceMatch.c  soft_source_match_table.c
src/OT-Utils/include/: link_metrics.h  otUtilities_linkMetrics.h  otUtilities_macFrame.h
src/utils/: fifoBuffer_t.h  linkedListBuffer_t.h
test/: Makefile  mainED.c  mainGCF.c  mainMisc.c  mainRX.c  mainTX.c  sniffer.c
test/OpenOCD/: ATMEL-ICE-OpenOCD-samr21e18a.cfg  start-ocd-server  start-ocd-server-edgb
test/OpenOCD_config/: .gitignore
